# SSLH

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  alternative_env_install.sh  build_directories.sh  environment.yaml  environment.yml  environment_full.yaml  post_install.sh  post_setup.sh  requirements.txt  setup.cfg  setup.py
conf/: common.yaml  deep_co_training.yaml  fixmatch.yaml  mean_teacher.yaml  mixmatch.yaml  mixup.yaml  pseudo_labeling.yaml  remixmatch.yaml  supervised.yaml  uda.yaml
config/: common.yaml  deep_co_training.yaml  fixmatch.yaml  mean_teacher.yaml  mixmatch.yaml  mixup.yaml  pseudo_labeling.yaml  remixmatch.yaml  supervised.yaml  uda.yaml
notebooks/: augments.py  augments_plot.ipynb  export_results_to_csv.ipynb  figures.ipynb  fixmatch.ipynb  full_supervised_copy.ipynb  mixmatch.ipynb  plot_augment_example.ipynb  plot_beta_distribution_example.ipynb  plot_mixup_example.ipynb  supervised.ipynb  test_board.ipynb  test_builders.ipynb  test_loss.ipynb  test_metrics.ipynb  test_samplers.ipynb  tests.ipynb  utils.py
osirim/: all_fm.sh  all_mm.sh  all_rmm.sh  all_su_10.sh  all_su_100.sh  all_uda.sh  classic_fm.sh  ds_cifar10.sh  ds_esc10.sh  ds_gsc.sh  ds_ubs8k.sh  fm.sh  fm_exp.sh  get_board_path.sh  get_ds.sh  get_ds_path.sh  get_py_path.sh  grid_augms.sh  grid_esc10_mm.sh  grid_fm_alpha_search.sh  grid_fm_cifar.sh  grid_seed.sh  mlu_upd.sh  mm.sh  mm_exp.sh  mv_boards.sh  mv_old_logs.sh  nvidia_watch.sh  paper.sh  paper_v2.sh  rmm.sh  sq.sh  su.sh  su_augm.sh  su_exp.sh  test.sh  test_as.sh  uda.sh  uda_exp.sh
sbatch/: run.sh  (+9 more)
(+860 files in other folders)
