# -*- coding: utf-8 -*-

[metadata]
author = Etienne Labbé (Labbeti)
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = Deep Semi-Supervised Learning for audio tagging.
long_description = file: README.md
long_description_content_type = text/markdown
name = sslh
url = https://github.com/Labbeti/SSLH
version = attr: sslh.__version__

[options]
packages=find:
package_dir=
    =.
python_requires = >= 3.9
install_requires =
    torch==1.7.1
    torchaudio==0.7.2
    torchvision==0.8.2
    pytorch-lightning==1.2.10
    tensorboard==2.9.0
    matplotlib==3.5.2
    numpy==1.22.4
    librosa==0.9.1
    h5py==3.6.0
    pandas==1.4.2
    tqdm==4.64.0
    black==21.12b0
    click==8.0.4
    pyyaml==6.0
    soundfile==0.10.3.post1
    advertorch==0.2.3
    hydra-core==1.1.2
    hydra-colorlog==1.2.0

[options.extras_require]
dev =
  pytest
  flake8
  black
  ipython
  ipykernel
  iprogress

[options.packages.find]
where=.
